# tree-sitter-cel

./: .editorconfig  .gitattributes  .gitignore  .tsqueryrc.json  Cargo.toml  Makefile  README.md  binding.gyp  buf.gen.yaml  grammar.js  package-lock.json  package.json  tree-sitter-cel.wasm  tree-sitter.json
.github/: pull_request_template.md
.github/workflows/: ci.yaml  ci.yml
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
examples/: check_image_registry.cel  disallow_host_ports.cel  drop_all_cap.cel  duration_timestamp.cel  jwt_custom_claims.cel  message.cel  quoted_strings.cel  require_non_root.cel  semantic_version_check.cel
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm
queries/cel/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt  regression.txt
